SERVER-77040 Append API version fields to root of explain command

GitOrigin-RevId: 3b852efa5b4321903c2962b53458feb4d9f39d2c