src/mongo/db/modules/enterprise/jstests/fle/api-version.js
@@ -5,20 +5,34 @@
 load("src/mongo/db/modules/enterprise/jstests/fle/lib/mongocryptd.js");
 load("src/mongo/db/modules/enterprise/jstests/fle/lib/utils.js");
 
-function runTestCmdVersion(db, cmd, apiVersion) {
+function runTestCmdVersion(db, cmd, apiVersion, apiDeprecationErrors, apiStrict) {
     if (apiVersion !== undefined) {
         cmd = Object.assign({}, cmd, {apiVersion: apiVersion});
     }
+
+    if (apiDeprecationErrors !== undefined) {
+        cmd = Object.assign({}, cmd, {apiDeprecationErrors: apiDeprecationErrors});
+    }
+
+    if (apiStrict !== undefined) {
+        cmd = Object.assign({}, cmd, {apiStrict: apiStrict});
+    }
+
     jsTest.log('Command: ' + tojson(cmd));
     const result = assert.commandWorked(db.runCommand(cmd)).result;
     jsTest.log('Result: ' + tojson(result));
     assert(result.apiVersion === cmd.apiVersion,
            tojson(result.apiVersion) + ' !== ' + tojson(cmd.apiVersion));
+    assert(result.apiDeprecationErrors === cmd.apiDeprecationErrors,
+           tojson(result.apiDeprecationErrors) + ' !== ' + tojson(cmd.apiDeprecationErrors));
+    assert(result.apiStrict === cmd.apiStrict,
+           tojson(result.apiStrict) + ' !== ' + tojson(cmd.apiStrict));
 }
 
 function runTestCmd(db, cmd) {
-    runTestCmdVersion(db, cmd, undefined);
-    runTestCmdVersion(db, cmd, '1');
+    runTestCmdVersion(db, cmd, undefined, undefined, undefined);
+    runTestCmdVersion(db, cmd, '1', undefined, undefined);
+    runTestCmdVersion(db, cmd, '1', true, false);
 }
 
 function runTest(db) {
